--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ hr {
 }
 body {
   font-family: "Andada Pro", serif;
+  margin: 0;
 }
 
 .container {
@@ -34,6 +35,7 @@ body {
   color: white;
   background-color: var(--primary-color);
   border-radius: 5rem;
+  margin-right: 1rem;
 }
 
 .secondary-link {
@@ -95,6 +97,8 @@ body {
 
 .section {
   padding: 2rem;
+  margin: 1rem 10rem;
+  border-radius: 2rem;
 }
 
 .section h1 {
