--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Andada+Pro:ital,wght@1,500&display=swap");
 
+@media(max-width:640px){
+  .section{
+    width: 200px;
+    position: relative;
+    right: 27%;
+  }
+}
+
 :root {
   --primary-color: #7c3aed;
   --off-white: #f3f4f6;
